[package]
name = "axi-uart16550"
version = "0.2.1"
description = "AXI UART16550 IP core driver"
rust-version = "1.87.0"
edition = "2024"
homepage = "https://egit.irs.uni-stuttgart.de/rust/axi-uart16550"
repository = "https://egit.irs.uni-stuttgart.de/rust/axi-uart16550"
license = "MIT OR Apache-2.0"

[dependencies]
derive-mmio = "0.7"
bitbybit = "2"
arbitrary-int = "2"
nb = "1"
libm = "0.2"
critical-section = "1"
thiserror = { version = "2", default-features = false }
fugit = "0.4"
embedded-hal-async = "1"
embedded-hal-nb = "1"
embedded-io = "0.7"
embedded-io-async = "0.7"
embassy-sync = "0.8"
raw-buffer = "0.1"
portable-atomic = { version = "1", optional = true }

[features]
default = ["1-waker"]
1-waker = []
2-wakers = []
4-wakers = []
8-wakers = []
16-wakers = []
32-wakers = []

[dev-dependencies]
approx = "0.5"
