[package]
name = "axi-uartlite"
version = "0.2.1"
description = "LogiCORE AXI UART Lite v2.0 driver"
rust-version = "1.87.0"
edition = "2024"
homepage = "https://egit.irs.uni-stuttgart.de/rust/axi-uartlite"
repository = "https://egit.irs.uni-stuttgart.de/rust/axi-uartlite"
license = "MIT OR Apache-2.0"

[dependencies]
derive-mmio = "0.6"
bitbybit = "2"
arbitrary-int = "2"
nb = "1"
embedded-hal-nb = "1"
embedded-io = "0.7"
embedded-io-async = "0.7"
critical-section = "1"
thiserror = { version = "2", default-features = false }
embassy-sync = "0.8"
raw-buffer = "0.1"

[features]
default = ["1-waker"]
1-waker = []
2-wakers = []
4-wakers = []
8-wakers = []
16-wakers = []
32-wakers = []

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
